# 2019_C

./: CMakeLists.txt  README.md  openocd.cfg
2023_D/: .clangd  CMakeLists.txt
2023_D/app/Inc/: FFT.h
2023_D/app/Src/: FFT.c  oled.c
2023_D/cmake/: stm32cubemx.cmake  toolchain.cmake  utils.cmake
2023_D/mcu/: .mxproject  2023_D.ioc  Makefile
2023_D/mcu/Core/Inc/: stm32g4xx_it.h
2023_D/mcu/Core/Src/: adc.c  gpio.c  main.c  stm32g4xx_it.c  tim.c  usart.c
2023_H/.cache/clangd/index/: FFT.c.FD711877B9BA3225.idx  FFT.h.83E387AD92985A7C.idx  adc.c.C5805B50A95BBC99.idx  adc.h.0B8C2365BF2C6912.idx  arm_math.h.3A285B5314D55E98.idx  arm_math.h.6A3B0A914413A33A.idx  cmsis_compiler.h.DD5BB441B28B495B.idx  cmsis_gcc.h.ECE4A68B26715BDD.idx  cmsis_version.h.7A7CC3351E407E50.idx  core_cm4.h.651AC59D6E120564.idx  dma.c.55804748D9114DFF.idx  dma.h.3FDDE036B927EE55.idx  font.c.B958B72A6CAAD862.idx  font.h.0A70F232E2B57649.idx  gpio.c.DECAE43BB665EDC9.idx  gpio.h.D85F9981F81ECAEA.idx  i2c.c.4B8F2F464C8D646A.idx  i2c.h.BBB582535C7C51D6.idx  main.c.771DF32DA463A003.idx  main.h.4DED943951927A8C.idx  mpu_armv7.h.8686F6B69A3C5709.idx  oled.c.937A26D6F86D8926.idx  oled.h.2A18D40BDA078A4B.idx  startup_stm32g431xx.s.1B5B9EE361CD2A83.idx  stm32_hal_legacy.h.D709E0F1BC04F2E4.idx  stm32g431xx.h.6930CD3C89AFBDF4.idx  stm32g4xx.h.E7607632D892B755.idx  stm32g4xx_hal.c.A8603C9A11696457.idx  stm32g4xx_hal.h.E8ADAAA000481AC4.idx  stm32g4xx_hal_adc.c.0F44ABD13CD7E84A.idx  stm32g4xx_hal_adc.h.F6D9122C4979582B.idx  stm32g4xx_hal_adc_ex.c.4DAED9CDDB1D2638.idx  stm32g4xx_hal_adc_ex.h.5AABFC88986A0183.idx  stm32g4xx_hal_conf.h.E3CA5725E9381730.idx  stm32g4xx_hal_cortex.c.FD8D9EA15E6973D7.idx  stm32g4xx_hal_cortex.h.B4483CCDF6D1A234.idx  stm32g4xx_hal_def.h.DE1EF50C89C6C857.idx  stm32g4xx_hal_dma.c.3304B147FFA906F9.idx  stm32g4xx_hal_dma.h.74C58BCCBFCB2450.idx  stm32g4xx_hal_dma_ex.c.254B85CEFA777D54.idx  (+47 more)
app/Inc/: FFT.h
app/Src/: FFT.c
cmake/: toolchain.cmake
mcu/: 2023_D.ioc  Makefile  STM32G431RBTx_FLASH.ld
mcu/Core/Inc/: stm32g4xx_it.h
mcu/Core/Src/: adc.c  i2c.c  main.c  stm32g4xx_it.c  tim.c  usart.c
